--- a/Ballychat.html
+++ b/Ballychat.html
@@ -432,7 +432,7 @@
                                         <p class="center-text"> Pause</p> 
                                          <p>Thank you for your patience. I've successfully processed the pause of your subscription. Please make a note that once the pause period ends, you will receive an email notification stating that your subscription will automatically renew.</p> 
                                           <p class="center-text"> 30 Days free</p>
-                                         <p>Thank you for your patience. I'm pleased to inform you that we have successfully processed the 30-day free trial for you. You should now have access to all the content available during this trial period.</p> 
+                                         <p>Thank you for your patience. I'm pleased to inform you that we have successfully processed the 30-day free for you. You should now have access to all the content available during this trial period.</p> 
                                 
 
                                         </td>
