--- a/Ballychat.html
+++ b/Ballychat.html
@@ -403,7 +403,7 @@
                              <H3 > Free 30 days | Monthly Only</h3>
                                 <p>I understand that you're thinking of cancelling your Bally Sports subscription, and I'd like to offer you a solution that might help. As a valued customer, I'm authorized to offer you a complimentary 30-day subscription to our service, which will allow you to continue experiencing all the great features and benefits of Bally Sports<p/>
                                  <p class="center-text">Denied the Pause offer the 30 days free</p>
-                                <p>I appreciate your consideration, but if you're not interested in pausing your subscription, how about I offer you a 30-day free trial instead? This way, you can continue enjoying the games for an additional month at no cost. If you decide to continue after the trial period, your regular subscription will resume as usual. <p/>
+                                <p>I appreciate your consideration, but if you're not interested in pausing your subscription, how about I offer you a 30-day free instead? This way, you can continue enjoying the games for an additional month at no cost. If you decide to continue after the trial period, your regular subscription will resume as usual. <p/>
 
                                 <p>Does this option sound more appealing to you, or are you still interested in canceling your subscription?<p/>
                                          <hr>          
