--- a/Ballychat.html
+++ b/Ballychat.html
@@ -403,7 +403,7 @@
                              <H3 > Free 30 days | Monthly Only</h3>
                                 <p>I understand that you're thinking of cancelling your Bally Sports subscription, and I'd like to offer you a solution that might help. As a valued customer, I'm authorized to offer you a complimentary 30-day subscription to our service, which will allow you to continue experiencing all the great features and benefits of Bally Sports<p/>
                                  <p class="center-text">Denied the Pause offer the 30 days free</p>
-                                <p>I appreciate your consideration, but if you're not interested in pausing your subscription, how about I offer you a 30-day free instead? This way, you can continue enjoying the games for an additional month at no cost. If you decide to continue after the trial period, your regular subscription will resume as usual. <p/>
+                                <p>I appreciate your consideration, but if you're not interested in pausing your subscription, how about I offer you a 30-day free instead? This way, you can continue enjoying the games for an additional month at no cost. If you decide to continue after the period, your regular subscription will resume as usual. <p/>
 
                                 <p>Does this option sound more appealing to you, or are you still interested in canceling your subscription?<p/>
                                          <hr>          
@@ -422,7 +422,7 @@
 
                                         <p>Please keep in mind that the pause option will automatically renew your subscription once the pause period ends. You'll receive an email notification before the renewal takes place, allowing you to make any changes or adjustments at that time</p>
 
-                                        <h4>Free 30days</h4><p>I'm glad to hear you've chosen the 30-day free trial option. To proceed, could you please provide me with the last four digits of the card on file and its expiration date for verification purposes? This information will help us set up the trial for you.</p>
+                                        <h4>Free 30days</h4><p>I'm glad to hear you've chosen the 30-day free option. To proceed, could you please provide me with the last four digits of the card on file and its expiration date for verification purposes? This information will help us set up for you.</p>
                                         <hr>                                    <p class="center-text">Acknowledgement|Hold Pause</p>
                                         <p>Thank you for providing the necessary information. May I please have your permission to put this chat on hold for 1 or 2 minutes while I process the pause of your subscription? I'll make sure to get this done as quickly as possible for you.</p>
                                     
